[chore #156145809] Fix homepage alignment and urls
	src/_components/HomePage.jsx - Change bootstrap classes to manage alignment
	src/_services/category.services.js - Fix api URL
	src/_services/recipe.services.js - Fix api URL
	src/_services/user.services.js - Fix api URL
	src/styles/css/style.css - Fix alignment issues

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -28,10 +28,11 @@ input {
 }
 
 .whiteback {
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 1rem 1rem;
   width: 50%;
   margin: 20% auto;
+  max-width: 466px;
   border-radius: 0.3em;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
@@ -164,4 +165,8 @@ input {
 
 .welcome-h3 {
   color: #00cc99;
+}
+
+.pagination>.active>span {
+  z-index:0;
 }
